[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/TankBaseSpritSinglee.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ShellsGun.png" type="Texture" id=4]
[ext_resource path="res://Assets/TankMenaceWalkeSingler.png" type="Texture" id=5]
[ext_resource path="res://Scenes/StartMenu.gd" type="Script" id=6]
[ext_resource path="res://Objects/Gamemanager.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Scenes/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.321569, 0.596078, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hello btutton" type="Button" parent="."]
margin_left = 381.0
margin_top = 250.0
margin_right = 703.0
margin_bottom = 350.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset Game" type="Button" parent="."]
margin_left = 817.0
margin_top = 493.0
margin_right = 1017.0
margin_bottom = 593.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Reset game data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 381.0
margin_top = 393.0
margin_right = 703.0
margin_bottom = 493.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tank2" type="TextureRect" parent="."]
visible = false
margin_left = 145.723
margin_top = 50.0
margin_right = 185.723
margin_bottom = 114.0
rect_rotation = 22.5919
rect_scale = Vector2( 5.43885, 5.43885 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tank" type="TextureRect" parent="."]
visible = false
margin_left = 334.723
margin_top = -70.0
margin_right = 374.723
margin_bottom = -6.00001
rect_rotation = 50.0164
rect_scale = Vector2( 5.43885, 5.43885 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="TextureRect" parent="."]
visible = false
margin_left = 731.0
margin_top = 414.0
margin_right = 771.0
margin_bottom = 454.0
rect_rotation = -19.1386
rect_scale = Vector2( 11.7449, 11.7449 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 382.0
margin_top = 100.0
margin_right = 704.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "Play tank menace"

[node name="Gamemanager" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Hello btutton" to="." method="_on_Hello_btutton_pressed"]
[connection signal="pressed" from="Reset Game" to="." method="_on_Reset_Game_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
